[gd_scene load_steps=9 format=3 uid="uid://bl7pjotc7ibe3"]

[ext_resource type="Script" path="res://Objects/UI/Scripts/OverworldUI.gd" id="1_a6sns"]
[ext_resource type="Texture2D" uid="uid://t8wr247qndot" path="res://Assets/Options.png" id="1_clnle"]
[ext_resource type="PackedScene" uid="uid://c8huwo6ppqdrt" path="res://Objects/UI/LabelButton.tscn" id="2_5cv1q"]
[ext_resource type="PackedScene" uid="uid://2fq6scld01gq" path="res://Objects/UI/DialogBox.tscn" id="2_caxfj"]
[ext_resource type="FontFile" uid="uid://cq6y8rhxtac33" path="res://Assets/dogicapixel.ttf" id="3_kkorv"]
[ext_resource type="Texture2D" uid="uid://csnjvdqwhfwhj" path="res://Assets/Close.png" id="4_yn734"]

[sub_resource type="Theme" id="Theme_2qomv"]
default_font = ExtResource("3_kkorv")
default_font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78t16"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="OverworldUI" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a6sns")
button = ExtResource("2_5cv1q")
dialogBox = ExtResource("2_caxfj")

[node name="Menu" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
icon = ExtResource("1_clnle")
flat = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme = SubResource("Theme_2qomv")
theme_override_styles/panel = SubResource("StyleBoxFlat_78t16")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Status" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
text = "Status"
flat = true

[node name="Items" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("3_kkorv")
theme_override_font_sizes/font_size = 8
text = "Items"
flat = true

[node name="Equipment" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("3_kkorv")
theme_override_font_sizes/font_size = 8
text = "Equipment"
flat = true

[node name="Caster" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Caster"
flat = true

[node name="Close" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
text = "Close"
flat = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Interact" type="Button" parent="MarginContainer"]
visible = false
layout_mode = 2
icon = ExtResource("4_yn734")
flat = true

[node name="OptionContainer" type="MarginContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 0.75
offset_left = -2.0
grow_horizontal = 0
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="OptionContainer"]
visible = false
layout_mode = 2
alignment = 2

[node name="DialogContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="pressed" from="Menu" to="." method="_on_btn_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Status" to="." method="_on_btn_status_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Items" to="." method="_on_btn_items_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Equipment" to="." method="_on_btn_equipment_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Caster" to="." method="_on_btn_caster_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Close" to="." method="_on_btn_close_pressed"]
[connection signal="pressed" from="MarginContainer/Interact" to="." method="_on_interact_pressed"]
